syntax = "proto3";
package qrpc.test.api;

import "google/protobuf/empty.proto";

option go_package = "test/result";

// TestAPI provides methods to test qRPC.
service TestAPI {
  // FirstMethod tests first method.
  rpc FirstMethod(FirstMethodRequest) returns (google.protobuf.Empty);

  // SecondMethod tests second method.
  rpc SecondMethod(SecondMethodRequest) returns (google.protobuf.Empty);
}

// FirstMethodRequest - request message for FirstMethod rpc.
message FirstMethodRequest {
  string uid = 1;
}

// SecondMethodRequest - request message for SecondMethod rpc.
message SecondMethodRequest {
  string uid = 1;
}
